[package]
name = "yage"
version = "0.0.1"
description = "Yet another graphics engine"
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
repository = "https://github.com/bwasty/yage"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["rendering"]
keywords = ["glTF", "3D", "scene"]

edition = "2018"

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.6"
wasm-bindgen = "0.2.36"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# TODO!!: make js-sys, web-sys optional for native compilation
js-sys = "0.3.14"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.36"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
