[package]
name = "yage"
version = "0.0.1"
description = "Yet another graphics engine"
authors = ["Benjamin Wasty <benjamin.wasty@cginternals.com>", "Stefan Buschmann <stefan.buschmann@cginternals.com>"]
repository = "https://github.com/cginternals/yage"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["rendering"]
keywords = ["glTF", "3D", "scene"]

edition = "2018"

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
gltf = ["yage-gltf"]
# NOTE: to disable the default gltf feature, use `default-features = false`
default = ["gltf"]

[workspace]
members = ["yage-core", "yage-glutin", "yage-web", "yage-gltf", "yage-examples", "tools/viewer"]
exclude = ["tools/rust-webpack"]

[dependencies]
cfg-if = "0.1.7"

yage-core = { path = "yage-core", version = "0.0.1" }
yage-gltf = { path = "yage-gltf", version = "0.0.1", optional = true }
yage-examples = { path = "yage-examples", version = "0.0.1" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yage-glutin = { path = "yage-glutin", version = "0.0.1" }
[target.'cfg(target_arch = "wasm32")'.dependencies]
yage-web = { path = "yage-web", version = "0.0.1" }

wasm-bindgen = "0.2.40"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.40"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bin]]
name = "viewer"
path = "tools/viewer/src/main.rs"
