[package]
name = "yage-examples"
version = "0.0.1"
authors = ["Benjamin Wasty <benjamin.wasty@cginternals.com>", "Stefan Buschmann <stefan.buschmann@cginternals.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
yage-core = { path = "../yage-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.12.0"
