[package]
name = "yage-gl"
version = "0.0.1"
authors = ["Benjamin Wasty <benjamin.wasty@cginternals.com>", "Stefan Buschmann <stefan.buschmann@cginternals.com>"]
edition = "2018"

[dependencies]
glenum = "0.1.1"
log = "0.4.6"
simplelog = "0.5.3"
[dependencies.web-sys]
version = "0.3.14"
# TODO!: remove unneeded...
features = [
  # 'Document',
  # 'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  # 'Window',
  'console'
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.11.0"

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.14"
wasm-bindgen = "0.2.37"

