[package]
name = "yage-gl"
version = "0.0.1"
authors = ["Benjamin Wasty <benjamin.wasty@cginternals.com>", "Stefan Buschmann <stefan.buschmann@cginternals.com>"]
edition = "2018"

[dependencies]
glenum = "0.1.1"
log = "0.4.6"
cgmath = "0.17.0"
[dependencies.web-sys]
version = "0.3.17"
features = [
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.12.0"
simplelog = "0.5.3"

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.17"
wasm-bindgen = "0.2.40"

