[package]
name = "yage-web"
version = "0.0.1"
authors = ["Benjamin Wasty <benjamin.wasty@cginternals.com>", "Stefan Buschmann <stefan.buschmann@cginternals.com>"]
edition = "2018"

[dependencies]
yage-core = { path = "../yage-core" }
wasm-bindgen = "0.2.40"

[dependencies.web-sys]
version = "0.3.17"
features = [
  "Element",
  "HtmlCanvasElement",
  'WebGl2RenderingContext',
]
